fix web run on mobile

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -20,7 +20,7 @@ body {
 
 body {
   margin: 0;
-  padding: 3rem;
+  padding: 0;
   font-family: 'Karla', sans-serif;
   font-weight: 400;
   line-height: 1.5;
@@ -112,6 +112,7 @@ header a {
   color: var(--light);
 }
 
-.list-container{
+.list-container {
   justify-content: center;
+  padding: 3rem;
 }
